# Fulmar

./: .readthedocs.yaml  README.md  pyproject.toml  readthedocs.yaml  setup.py  untitled.py  untitled2.py
.github/workflows/: draft-pdf.yml  tests.yml
Examples/: fulmar_example.ipynb
JOSS/: paper.bib  paper.md
docs/: conf.py  conf_.py  index.rst  requirements.txt
docs/_build/doctrees/: Developer documentation.doctree  Installation.doctree  api.doctree  environment.pickle  example_K2-109.doctree  fulmar.doctree  index.doctree  installation.doctree  modules.doctree  setup.doctree  usage.doctree
docs/_build/html/: .buildinfo  Developer documentation.html  Installation.html  api.html  example_K2-109.html  fulmar.html  genindex.html  index.html  installation.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  setup.html
docs/_build/html/_sources/: Installation.rst.txt  modules.rst.txt
docs/source/: api.rst  conf.py  example_K2-109.ipynb  index.rst  installation.rst  requirements.txt
fulmar/: TIC2TOI.json  TOI2TIC.json  estimators.py  func.py  main.py  tess_cat.csv  version.py
fulmar_astro.egg-info/: PKG-INFO
tests/: test_estimators.py  test_func.py  test_time.py  test_utils.py
