[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "fulmar-astro"
version = "0.1.0"
description = "Follow-Up Lightcurves Multitool Assisting Radial velocities"
authors = ["José Rodrigues <jose.rodrigues@astro.up.pt>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
astropy = "^5.0"
arviz = "^0.11.4"
corner = "^2.2.1"
exoplanet = "^0.5.1"
pymc3 = "^3.11.4"
lightkurve = "^2.0.11"
matplotlib = "^3.5.0"
numpy = "^1.21.4"
pathlib = "^1.0.1"
transitleastsquares = "^1.0.30"
